<resources>
    <string name="app_name">Smart Reality Modules</string>
    <string name="no_notification_found">Currently there are no new notification.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refer_name">*Name</string>
    <string name="refer_mobile_number">*Mobile No.</string>
    <string name="refer_alt_mobile">Alternate Mobile No.</string>
    <string name="refer_email_id">Email ID</string>
    <string name="refer_project_interested_in">*Project Interested In</string>
    <string name="refer_dob">Date of Birth</string>
    <string name="refer_adderess">Address</string>
    <string name="refer_pincode">Pincode</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_valid_mobile_no">Enter Valid Mobile No.</string>
    <string name="enter_valid_alt_mobile_no">Enter Valid Alternative Mobile No.</string>
    <string name="enter_valid_email_id">Enter Valid Email ID</string>
    <string name="enter_dob">Enter Date Of Birth</string>
    <string name="enter_anniversary_dob">Enter Anniversary Date</string>
    <string name="enter_valid_pincode">Enter Valid Pin Code</string>
    <string name="data_error">Sorry for inconvenience. Please try again later</string>
    <string name="about_us_better_future">The Key To A Better Future</string>
    <string name="about_us_leadership">The Path Of Leadership</string>
    <string name="about_us_way_ahead">The Way Ahead</string>
    <string name="about_us_tc">Terms &amp; Condition</string>
    <string name="about_us_pp">Privacy Policy</string>
    <string name="about_us_future">  <![CDATA[ <p>SPR is the leading real estate developer dedicated to the acquisition and development of residential and
            commercial projects in Tamil Nadu. Founded in 1972 by Prithviraj S Kawad to explore a plethora of opportunities across a full range of development capacities; SPR has consistently lived up to the commitment of delivering more than what delivering more than what is promised.</p>
          <p>Innovation is a key to our competitive differentiation and value proposition. We strive to surpass expected standards and set new ones through excellence in terms of scalability, flexibility and operational efficiency. Our efforts to differentiate ourselves by providing exceptional value has been recognised and acknowledged by the industry and our customers.</p>
          <p>We ventured into real estate with excellence in living as the key to a better future. Through our exceptional
            projects, we have now become a trusted source of innovation, expertise and passionate architecture.</p>
          <p>Today, under the leadership of Mr. Hitesh P Kawad, SPR is being taken to greater heights as we cross significant milestones in our journey of discovering endless possibilities of the growth ahead.</p>  ]]>
    </string>
     <string name="about_us_leaderships">  <![CDATA[ <p>As a forward-thinking leader, Mr. Hitesh brings with him a wealth of experience and knowledge of the Real Estate industry. His valuable experience, strong convictions, and thorough understanding based on the foundations of professionalism, integrity and expertise has driven SPR Group to reaching such great heights.</p>
        <p>As the real estate sector surpasses its traditional role as a builder towards offering a holistic package of end to end solutions for a home buyer, Mr. Hitesh has propelled SPR in adapting to the changing dynamics through a turn-around in corporate strategy by instilling a sense of purpose, unerring focus and conviction to strive for the best in every way.</p>
        <p>One of his greatest strengths is his ability to understand exactly what the customer wants – to think like they do, to understand things from their perspective, and sometimes even to anticipate their needs before they realize it themselves. This combination of intuition, insight and innovation has helped SPR deliver consistently in line with changing needs and put the customer first, always.</p> ]]>
     </string>
     <string name="about_us_terms">  <![CDATA[ <p>Please read the Terms & Conditions of use before accessing or using this website.</p>
        <p> By accessing or using this site you agree to be bound, without limitation or qualification, by these Terms & Conditions of use. If you do not accept any of the Terms & Conditions stated herein, please do not use this site. SPR Construction Private Limited may, in its sole discretion, modify or revise these Terms & Conditions at any time by updating this web page. You are bound by any such modification or revision.</p>
        <p> You may also read the Privacy Policy before using this site.  </p>
        <p> Warranty Disclaimer: SPR Construction Private Limited makes every effort to ensure the accuracy, accessibility, integrity and timeliness of this information. But SPR Construction Private Limited cannot and does not guarantee, and makes no warranties as to the above. SPR Construction Private Limited assumes no liability or responsibility for any errors or omissions in the content of this site and further disclaims any liability of any nature for any loss howsoever caused in connection with using this website.</p>
        <p> Without prior notice SPR Construction Private Limited may make changes to these content at any time. The products and services mentioned on the website are subject to availability. Information on programs and details of services displayed on this website may vary or alter from the actual specifics; it is therefore strongly recommended that you contact SPR Construction Private Limited before making any decisions.</p>
        <p> Disclaimer – By entering this site you acknowledge and agree that your use is at your own risk and that none of the parties involved in creating, producing, or delivering this site is liable for any direct, incidental, consequential,</p>
        <p> indirect, or punitive damages, or any other losses, costs, or expenses or any kind (including legal fees, expert fees, or other disbursements) which may arise, directly or indirectly, through the access to, use of, or browsing of this site or through your downloading of any materials, data, text, images, video or audio from this site, including but not limited to anything caused by any viruses, bugs, human action or inaction or any computer system, phone line, hardware, software or program malfunctions, or any other errors, failures or delays in computer transmissions or network connections.
        Links to other sites – Although this site may be linked to other sites, SPR Construction Private Limited is not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with the linked site, unless specifically stated therein. By entering this site you acknowledge and agree that SPR Construction Private Limited has not reviewed all the sites linked to this site and is not responsible for the content of any off-site pages or any other site linked to this site. Your linking to any other off-site pages or other sites is at your own risk. SPR Construction Private Limited does not control the availability and content of services in those links and resources. Any concerns regarding any such services or resource, or any link thereto, should be directed to the respective service or resource. SPR Construction Private Limited does not endorse the content or material of the hyper links provided herein. Please take required permission from other websites and SPR Construction Private Limited for linking to this website.
        Termination of Access – SPR Construction Private Limited reserves the right to terminate your access to the website or any portion thereof at any time, without notice at it sole discretion.
        Indemnity – You agree to indemnify and hold harmless SPR Construction Private Limited, its parent companies, subsidiaries, affiliates, officers, directors, agents, employees, co-branders or other partners, and suppliers, from any claim, demand, action, or damage, including reasonable attorney’s fees, made by any third party due to, arising out of or related to your use of this website, your violation of the Terms & Conditions, any right of another, your connection to the website. </p>
        <p>Use – The user acknowledges that the use of the website by the user does not constitute a joint venture, partnership, employment or agency relationship between the user and SPR Construction Private Limited. You agree not to hold yourself as a representative, agent, or employee of SPR Construction Private Limited and SPR Construction Private Limited shall not be liable for any representation, act, or omission of the user.        </p>
        <p>Legal Jurisdiction – The Courts in Chennai alone will have exclusive jurisdiction in relation to all disputes which may arise out of or in connection with the use of the website The interpretation of these terms and conditions shall be construed in accordance with and governed by the laws of Union of India without giving effect to conflict of laws provision. Contacting SPR Construction Private Limited- By entering this site you acknowledge that this site is only for information purposes and you could contact us via using the “Contact Us” section on this website. But for all practical and legal purposes you are required to address your communication by certified mail to the below given address:</p>
        <b>SPR Construction Private Limited</b><br />
               <b> Registered Office:  </b><br />
                No.57, Narayana Mudali Street<br />
                Chennai 600079<br />
                Phone: +91 44 3728 3300<br /><br />
                <b>Corporate Office:</b><br />
                135, Sapna Trade Centre,<br />
                Poonamalee High Road,<br />
                Egmore, Chennai – 600084 <br />
                Phone: +91 44 3728 3300 <br />
                Website: www.sprindia.com
                 ]]>
     </string>
    <string name="user_home">Home\'</string>
    <string name="user_nav_projects">Projects</string>
    <string name="user_nav_offers">Offers</string>
    <string name="user_nav_feedback">Feedback</string>
    <string name="user_nav_notifications">Notifications</string>
    <string name="user_nav_share">Share App</string>
    <string name="user_nav_refer_friend">Refer a friend</string>
    <string name="user_nav_about_us">About us</string>
    <string name="user_nav_rate_us">Rate us</string>
    <string name="edit_profile_name_star">Name</string>
    <string name="edit_profile_mobile_no_star">*Mobile No</string>
    <string name="edit_profile_alternate_no">Alternate Mobile No</string>
    <string name="edit_profile_email_star">Email Id</string>
    <string name="edit_profile_dob">Date of Birth</string>
    <string name="edit_profile_relationship">Select Relationship Status</string>
    <string name="edit_profile_anniverasry">Anniversary date</string>
    <string name="edit_profile_address">Address</string>
    <string name="edit_profile_pincode">Pincode</string>
</resources>