<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.smartrealitymodules.ui.activity.AboutUsActivity">
    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar"/>
    <LinearLayout
        android:layout_below="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linear_about_future"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginStart="@dimen/margin15"
                    android:layout_weight="1"
                    android:text="@string/about_us_better_future"
                    android:textColor="@color/textDescription"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/textDescription" />


            <LinearLayout
                android:id="@+id/linear_about_leadership"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginStart="@dimen/margin15"
                    android:layout_weight="1"
                    android:text="@string/about_us_leadership"
                    android:textColor="@color/textDescription"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/textDescription" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="0.2"-->
            <!--android:gravity="center_vertical"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="@dimen/margin15"-->
            <!--android:layout_marginStart="@dimen/margin15"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/about_us_way_ahead"-->
            <!--android:textColor="@color/textDescription"-->
            <!--android:textSize="@dimen/textsize16" />-->

            <!--<ImageView-->
            <!--android:layout_width="35dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:padding="10dp"-->
            <!--android:src="@drawable/ic_right_arrow" />-->
            <!--</LinearLayout>-->

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:alpha="0.4"-->
            <!--android:background="@color/textDescription" />-->

            <LinearLayout
                android:id="@+id/linear_about_terms"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginStart="@dimen/margin15"
                    android:layout_weight="1"
                    android:text="@string/about_us_tc"
                    android:textColor="@color/textDescription"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/textDescription" />

            <LinearLayout
                android:id="@+id/linear_about_privacy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin15"
                    android:layout_marginStart="@dimen/margin15"
                    android:layout_weight="1"
                    android:text="@string/about_us_pp"
                    android:textColor="@color/textDescription"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/textDescription" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
